--- a/src/pages/Projects/projects.less
+++ b/src/pages/Projects/projects.less
@@ -15,3 +15,10 @@ background-clip: padding-box;
 .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
 margin-bottom: 30px;
 }
+
+.antd-container{
+  @import '~antd/dist/antd.less';
+  margin-top: 3rem;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
